--- a/.gitignore
+++ b/.gitignore
@@ -134,3 +134,6 @@ dist
 .yarn/build-state.yml
 .yarn/install-state.gz
 .pnp.*
+
+#firebase credentials
+wildlife-go-firebase-adminsdk-fbsvc-9f89698fb0.json
